--- a/huang.html
+++ b/huang.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>我叫黄想相</h1>
-<p>我的学号<span id="stuientnumber">18002090214</span></p>
+<p>我的学号<span id="studentnumber">18002090214</span></p>
 </body>
 </html>
