--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <h1>我叫黄想相</h1>
      <p>我的学号<span id="studentnumber">18002090214</span>
         <img src="matrix.png">
-         <img id="logo" src="QQ图片20190831211425.gif">
+         <img id="logo" src="QQ图片20190831211425.gif" style="border-radius: 10px 20px 40px 80px">
      </p>
     </body>
 </html>
