--- a/index.html
+++ b/index.html
@@ -2,20 +2,21 @@
 
 <html>
     <body>
-        <script src="jquery-3.4.1.js"></script>
-        <script> 
-        $(function(){
-               $.get("Untitled-1.json",function(result){
-                   $("myname").text(result.myname);
-                   $("mynumber").text(result.mynumber);
-               }) 
-        })
-        </script>
+
     <h1><span id="myname"></span></h1>
      <p>我的学号<span id="mynumber"></span>
         <img src="matrix.png">
          <img id="logo" src="QQ图片20190831211425.gif" style="border-radius: 10px 20px 40px 80px">
      </p>
+        <script src="jquery-3.4.1.js"></script>
+        <script> 
+        $(function(){
+               $.get(".\Untitled-1.json",function(result){
+                   $("myname").text(result.myname);
+                   $("mynumber").text(result.mynumber);
+               }) 
+        })
+        </script>
     </body>
 </html>
 
