--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <script src="jquery-3.4.1.js"></script>
         <script> 
         $(function(){
-               $.get(".\Untitled-1.json",function(result){
+               $.get(".\data.json",function(result){
                    $("myname").text(result.myname);
                    $("mynumber").text(result.mynumber);
                }) 
