--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      </p>
         <script> 
         $(function(){
-               $.get("data.json",function(result){
+               $.get("./data.json",function(result){
                    $("myname").text(result.myname);
                    $("mynumber").text(result.mynumber);
                }) 
