--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <script> 
         $(function(){
                $.get("./data.json",function(result){
-                   $("myname").text(result.myname);
-                   $("mynumber").text(result.mynumber);
+                   $("#myname").text(result.myname);
+                   $("#mynumber").text(result.mynumber);
                }) 
         })
         $("#btn").click(function(){
             $.get("./data1.json",function(result){
-                   $("myname").text(result.myname);
-                   $("mynumber").text(result.mynumber);
+                   $("#myname").text(result.myname);
+                   $("#mynumber").text(result.mynumber);
             }) 
         })
         </script>
